<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jockerbitgames.palpitedobrasileirao.E_meus_grupos">

    <item
        android:id="@+id/instrucoes"
        android:title="@string/instrucoes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/atualizarGrupos"
        android:title="@string/atualizar_grupos"
        app:showAsAction="never"/>

    <item
        android:id="@+id/convitesRecebidos"
        android:title="@string/convites_recebidos"
        app:showAsAction="never"/>

    <item
        android:id="@+id/convitesEnviados"
        android:title="@string/convites_enviados"
        app:showAsAction="never"/>

    <item
        android:id="@+id/voltar"
        android:title="@string/voltar"
        app:showAsAction="never"/>

</menu>