<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jockerbitgames.palpitedobrasileirao.G_tabela_classificacao">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_margin="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_legenda"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/campeao"
                android:textColor="@color/black"
                android:background="@color/blue500"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/corLibertadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_libertadores"
                android:textColor="@color/black"
                android:background="@color/green100"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/corAcesso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_acesso"
                android:textColor="@color/black"
                android:background="@color/green100"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/corSulamericana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_sulamericana"
                android:textColor="@color/black"
                android:background="@color/yellow200"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/corRebaixados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_rebaixados"
                android:textColor="@color/black"
                android:background="@color/orange400"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/cor_lanterna"
                android:textColor="@color/black"
                android:background="@color/redA400"
                android:textSize="20sp"/>

        </TableRow>

    </TableLayout>
</LinearLayout>
