<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela_i_criar_grupos"
    android:focusableInTouchMode="true"
    tools:context="com.jockerbitgames.palpitedobrasileirao.I_enviar_mensagens"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/compartilhar_app"
        android:textColor="@color/blue50"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/invite_button_sms"
            android:contentDescription="@string/invite_button_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_por_sms"/>
        <ImageButton
            android:id="@+id/invite_button_zap"
            android:contentDescription="@string/invite_button_zap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_por_zap"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/ano_do_campeonato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/aviso_cobranca_operadora"
                android:textColor="@color/yellowA200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
