<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela_k_editar_grupos"
    android:focusableInTouchMode="true"
    tools:context="com.jockerbitgames.palpitedobrasileirao.K_editar_status"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/editar_status"
        android:textColor="@color/yellowA200"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nome_do_grupo_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/nome_do_grupo"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/listViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:choiceMode="multipleChoice"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:contentDescription="@string/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:background="@drawable/button_salvar"
            android:onClick="buttonSalvarStatus"/>
    </RelativeLayout>

</LinearLayout>
